--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,18 @@
     <version>3.141.59</version>
 </dependency>
   
-  
+  <dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.6</version>
+		</dependency>
+
+		<!-- http://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.6</version>
+		</dependency>
   
   </dependencies>
   
